StudentDetail同士を比較するように、再度修正。